portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: apps
  labels:
    app: portfolio
    rel: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
        rel: stable
    spec:
      containers:
        - name: portfolio
          image: diderikk/portfolio:v1.2.8@sha256:3abbdb0590ac525429f672a159fda7ab9c5498458af60e5485132b2196e4841d
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 3000
