portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: apps
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - port: 3000
  selector:
    app: portfolio
