portfolio/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portfolio-network-policy
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: portfolio
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
      - podSelector:
          matchLabels:
            app: portfolio
  egress:
    # Required in order to fetch data during getServerSideProps in Next.js
    - {}
